fix: cesium map side tools z-index

--- a/src/discrete-layer/views/discrete-layer-view.css
+++ b/src/discrete-layer/views/discrete-layer-view.css
@@ -214,3 +214,7 @@ body[dir='rtl'] .sideDetailsPanel {
   margin-left: 0;
   margin-right: 0;
 }
+
+.cesium-viewer .sideToolsContainer {
+  z-index: 5;
+}
